--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,31 @@
 # Dependencies
-node_modules/
-.pnp/
-.pnp.js
+**/node_modules
+**/.pnp
+**/.pnp.js
 
 # Testing
-coverage/
+**/coverage
 
 # Production
-build/
-dist/
+# Note: We want to keep the frontend build directory
+!app/frontend/build/
+
+# Misc
+.DS_Store
+**/.env.local
+**/.env.development.local
+**/.env.test.local
+**/.env.production.local
+
+**/npm-debug.log*
+**/yarn-debug.log*
+**/yarn-error.log*
+
+# IDE
+.idea/
+.vscode/
+**/*.swp
+**/*.swo
 
 # Environment files
 .env
@@ -33,7 +50,11 @@ yarn-error.log*
 Thumbs.db
 
 # Docker
-data/
 nginx/
 scripts/
-database/
+Dockerfile.dev
+docker-compose.dev.yml
+
+# Database
+data/postgres/
+data/backup/
