--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Backend for the leadership assessment tool",
   "main": "src/index.ts",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "test": "jest",
